--- a/src/app/common-ui/profile-card/profile-card.component.scss
+++ b/src/app/common-ui/profile-card/profile-card.component.scss
@@ -5,7 +5,6 @@
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 32px;
   font-family: "JetBrains Mono";
-  color: white;
   padding: 32px 24px;
   align-items: center;
 }
@@ -65,11 +64,11 @@
   height: max-content;
 }
 
-.skill-active {
-  border: 1px solid var(--primary-color);
-  color: var(--primary-color);
-  border-radius: 2px;
-}
+// .skill-active {
+//   border: 1px solid var(--primary-color);
+//   color: var(--primary-color);
+//   border-radius: 2px;
+// }
 
 button {
   min-height: 40px;
@@ -80,6 +79,7 @@ button {
   display: flex;
   gap: 6px;
   align-items: center;
+  color: var(--dark-primary-color);
 }
 
 .button-add {
@@ -89,42 +89,23 @@ button {
   padding: 14px;
 }
 
-.button-wide,
-.button-narrow {
+.button {
   height: max-content;
-}
-
-.button-narrow {
-  padding: 16px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.button-wide {
-  padding: 10px 20px;
+  padding: 10px 16px;
   color: var(--dark-primary-color);
   font-size: 14px;
   font-weight: 700;
   line-height: 24px;
   display: flex;
-  gap: 8px;
   justify-content: center;
   align-items: center;
-}
-
-.button-send {
+  gap: 8px;
   background-color: var(--primary-color);
   transition: all 0.1s;
   &:hover {
     background-color: var(--primary-hover-color);
   }
-}
-
-.button-share {
-  background-color: var(--primary-color);
-  transition: all 0.1s;
-  &:hover {
-    background-color: var(--primary-hover-color);
+  svg path {
+    fill: var(--dark-primary-color);
   }
 }
