--- a/src/app/common-ui/profile-card/profile-card.component.scss
+++ b/src/app/common-ui/profile-card/profile-card.component.scss
@@ -4,7 +4,7 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 32px;
-  font-family: "JetBrains Mono";
+  font-family: "JetBrains Mono", sans-serif;
   padding: 32px 24px;
   align-items: center;
 }
